# LeLamp

./: README.md  config.yaml  control.py  main.py  pyproject.toml
.placeholder/BOM/: main.md
3D/: Diffuser.3mf  Lamp Base (Rectangle).3mf  LampArm (Base-Elbow).3mf  LampArm (Wrist-Head).3mf  LampHead - LampHead.3mf
3D/normal_pi_variation/: Base-Arm Mount.3mf  Lamp Base Cover.3mf  Lamp Base.3mf  Lamp Head.3mf
controller/: xbox.py
docs/: 0. Prerequisites.md  1. Schematics.md  2. Servos.md  3. Lamp Head.md  4. Lamp Body.md  5. Lamp Control.md  6. Troubleshooting.md
hand_tracking/: __init__.py  draw_utils.py  hand_tracker.py  main.py
inverse_kinematics/: forward_inverse.py  ik.py  inverse.py
models/: MUJOCO_LOG.TXT  robot.urdf  scene.xml
models/lelamp/: config.json  robot.urdf  robot.xml
notebooks/: brax_basics.ipynb  gymnasium_v1.ipynb  gymnasium_v2.ipynb  mesh_analysis.ipynb  mujoco.ipynb
notebooks/logs/: .monitor.csv  evaluations.npz  monitor.csv
opencv/: aruco_detector.py  camera_calibration.py  camera_params.py  camera_stream.py  capture_calibration_images.py
prints/: LampArm (Elbow-Wrist).3mf
prints/modifications_for_so101/: CameraHolder.3mf  LampHead.3mf  MotorMount.3mf
simulation/: config.json  robot.urdf  robot.xml
simulation/assets/: ge_27.part  ge_27.stl  lamp_base.part  lamp_base.stl  lamparm__base_elbow.part  lamparm__base_elbow.stl  lamparm__elbow_wrist.part  lamparm__elbow_wrist.stl  lamparm__wrist_head.part  lamphead.part  zk_122.part  (+9 more)
tools/: calibrate.py  config_loader.py  fk.py  rerun.py  teleop.py  teleop_fk.py  teleop_rerun.py
(+47 files in other folders)
